# delfin

./: .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  delfin.cmb  flake.nix  icons.toml  meson.build  meson_options.txt  shell.nix
.gitea/issue_template/: bug-report.yaml  bug_report.yaml  feature_request.yaml  other.yaml
.woodpecker/: lint.yml  release.yml  test.yml
build-aux/: build-flatpak-dist  cafe.avery.Delfin.Devel.yaml  dist-vendor  libmpv.yaml
data/: cafe.avery.Delfin.desktop.in  cafe.avery.Delfin.gresource.xml.in  cafe.avery.Delfin.metainfo.xml  cafe.avery.Delfin.metainfo.xml.in  meson.build
data/ui/: shortcuts.ui
delfin/: .gitignore  Cargo.toml  build.rs  meson.build
delfin/src/: app.rs  app.scss  globals.rs  lib.rs  locales.rs  main.rs  meson_config.rs.in
delfin/src/accounts/: account_list.rs  account_list_item.rs  add_account.rs  mod.rs
delfin/src/borgar/: about.rs  borgar_menu.rs  mod.rs  sign_out_dialog.rs
delfin/src/config/: general.rs  migrate.rs  mod.rs  video_player_config.rs
delfin/src/config/versions/: config_v1.rs  mod.rs
delfin/src/jellyfin_api/: api_client.rs  mod.rs
delfin/src/jellyfin_api/api/: display_preferences.rs  info.rs  intro_skipper.rs  item.rs  items.rs  latest.rs  mod.rs  playstate.rs  shows.rs  system.rs  trickplay.rs  user.rs  views.rs
delfin/src/jellyfin_api/image_cache/: image.rs  image_params.rs  image_url.rs  mod.rs
delfin/src/jellyfin_api/models/: collection_type.rs  mod.rs  user_view.rs
delfin/src/jellyfin_api/util/: auth_header.rs  images.rs
delfin/src/media_details/: display_years.rs  episode.rs  episodes.rs  media_details_contents.rs  media_details_header.rs  mod.rs  run_time.rs  season_buttons.rs  seasons.rs  watched_state.rs
delfin/src/preferences/: general_preferences.rs  mod.rs  video_player_preferences.rs
delfin/src/preferences/video_player_preferences/: mod.rs  subtitles_preferences.rs
delfin/src/servers/: add_server.rs  mod.rs  server_discovery.rs  server_list.rs  server_list_item.rs
delfin/src/styles/: app.scss  library.scss  media-details.scss  media-tile.scss  overrides.scss  video-player.scss
delfin/src/utils/: bif.rs  constants.rs  debounce.rs  device_profile.rs  display_years.rs  empty_component.rs  inhibit.rs  item_name.rs  main_window.rs  message_broker.rs  mod.rs  playable.rs  rgba.rs  round.rs  shift_state.rs  ticks.rs
delfin/src/video_player/: keybindings.rs  mod.rs  mpris.rs  next_up.rs  session.rs  skip_intro.rs  trickplay.rs  video_player_component.rs
delfin/src/video_player/backends/: gst.rs  mod.rs  mpv.rs
delfin/src/video_player/controls/: audio_tracks.rs  control_broker.rs  fullscreen.rs  mod.rs  next_prev_episode.rs  play_pause.rs  playback_speed.rs  scrubber.rs  skip_forwards_backwards.rs  subtitles.rs  video_player_controls.rs  volume.rs
delfin/src/video_player/gst_play_widget/: mod.rs
jellything/: Cargo.toml  build.rs
jellything/src/: app.rs  globals.rs  lib.rs  main.rs
locales/be/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/cs/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/de/: _shared.ftl  account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/en-US/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/en_CA/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/es/: _shared.ftl  account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/eu/: account-list.ftl
locales/fr/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/hu/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/nl/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/pl/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/pt_BR/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/ru/: account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  server-list.ftl  shortcuts.ftl  video-player.ftl
locales/sr/: _shared.ftl  account-list.ftl  borgar-menu.ftl  library.ftl  media-details.ftl  preferences.ftl  (+3 more)
src/: app.css  app.rs  app.scss  config.rs  globals.rs  lib.rs  main.rs  main_window.rs  servers.rs
video_player_gst/: Cargo.toml
video_player_gst/src/: imp.rs  lib.rs
video_player_mpv/: Cargo.toml  Gir.toml  build.rs  meson.build
video_player_mpv/src/: lib.rs
video_player_mpv/src/auto/: enums.rs  mod.rs  track.rs  track_list.rs  versions.txt  video_player_mpv.rs
video_player_mpv/sys/: Cargo.toml  Gir.toml  build.rs  meson.build  meson.options
video_player_mpv/sys/src/: lib.rs
video_player_mpv/sys/src/auto/: versions.txt
video_player_mpv/sys/tests/: abi.rs  layout.c  manual.h
video_player_mpv/sys/video-player-mpv/: track-list.c  track-list.h  track.h  video-player-mpv.c  video-player-mpv.h
video_player_mpv/video-player-mpv/: video-player-mpv.c  video-player-mpv.h
video_player_mpv_sys/: Cargo.toml  build.rs  meson.build
video_player_mpv_sys/src/: lib.rs
video_player_mpv_sys/src/auto/: versions.txt
video_player_mpv_sys/tests/: abi.rs  constant.c  layout.c
video_player_mpv_sys/video-player-mpv/: track-list.c  track-list.h  track.c  video-player-mpv.c  video-player-mpv.h
(+114 files in other folders)
