[package]
name = "jellything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dirs = "5.0.1"
env_logger = "0.10.0"
gst = { package = "gstreamer", version = "0.20.5" }
gstgtk4 = { package = "gst-plugin-gtk4", version = "0.10.7" }
relm4 = { version = "0.6.0", features = ["libadwaita"] }
relm4-components = { version = "0.6.0", features = ["web"] }
relm4-icons = { version = "0.6.0", features = [
  "check-round-outline",
  "video-clip-multiple-filled",
  "play-multiple-filled",
  "tag-multiple-filled",
  "home-filled",
] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
tracing = { version = "0.1.37", features = ["log"] }
uuid = { version = "1.3.3", features = ["v4"] }
whoami = { version = "1.4.0", default-features = false }
