[package]
name = "jellything"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
derive_builder = "0.12.0"
dirs = "5.0.1"
env_logger = "0.10.0"
grass = { version = "0.13.1", default-features = false }
gst = { package = "gstreamer", version = "0.21.0" }
gstgtk4 = { package = "gst-plugin-gtk4", version = "0.11.0" }
gstplay = { package = "gstreamer-play", version = "0.21.0" }
jellyfin_api = "10.8.10-2"
regex = "1.9.5"
relm4 = { version = "0.7.0-alpha.1", features = ["gnome_44", "libadwaita"] }
relm4-icons = { version = "0.7.0-alpha.2", features = [
  "check-round-outline",
  "video-clip-multiple-filled",
  "play-multiple-filled",
  "tag-multiple-filled",
  "home-filled",
  "closed-captioning",
  "music-note-single",
  "star-large",
  "play-filled",
  "pause-filled",
  "fast-forward-filled",
  "rewind-filled",
  "skip-forward-10",
  "skip-forward-30",
  "skip-backwards-10",
  "skip-backwards-30",
  "left",
  "right",
] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
tokio = { version = "1.32.0", features = ["macros"] }
toml = "0.8.0"
tracing = { version = "0.1.37", features = ["log"] }
uuid = { version = "1.4.1", features = ["v4"] }
whoami = { version = "1.4.1", default-features = false }

# Use libadwaita 1.4 without Gnome 45
# (this makes cargo throw a warning, don't worry about it 😎👉👉)
[dependencies.libadwaita]
features = ["v1_2", "v1_3", "v1_4"]
