[workspace]
resolver = "2"
members = [
    "delfin",
    "video_player_mpv/sys",
    "video_player_mpv",
    "video_player_gst",
]
exclude = ["video_player_mpv/sys/gir"]
default-members = ["delfin"]
[workspace.dependencies]
relm4 = { version = "0.7.0-beta.1", features = ["gnome_44", "libadwaita"] }
