[package]
name = "delfin"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"

[features]
# Enables GStreamer video player backend
gst = ["dep:video_player_gst"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.31"
derive_builder = "0.12.0"
dirs = "5.0.1"
env_logger = "0.10.0"
fluent-templates = { version = "0.8.0", features = ["tera"] }
jellyfin_api = "10.8.10-2"
relm4 = { workspace = true }
relm4-icons = { version = "0.7.0-alpha.2", features = [
  "check-round-outline",
  "video-clip-multiple-filled",
  "play-multiple-filled",
  "tag-multiple-filled",
  "home-filled",
  "closed-captioning",
  "music-note-single",
  "star-large",
  "play-filled",
  "pause-filled",
  "fast-forward-filled",
  "rewind-filled",
  "skip-forward-10",
  "skip-forward-30",
  "skip-backwards-10",
  "skip-backwards-30",
  "left",
  "right",
  "refresh",
  "settings",
  "warning",
] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
sys-locale = "0.3.1"
tera = "1.19.1"
tokio = { version = "1.32.0", features = ["macros"] }
toml = "0.8.0"
tracing = { version = "0.1.37", features = ["log"] }
unic-langid = { version = "0.9.1", features = ["macros", "serde"] }
uuid = { version = "1.4.1", features = ["v4"] }
video_player_gst = { version = "0.1.0", path = "../video_player_gst", optional = true }
video_player_mpv = { version = "0.1.0", path = "../video_player_mpv" }
whoami = { version = "1.4.1", default-features = false }

[build-dependencies]
grass = "0.13.1"
regex = "1.9.5"
