[package]
name = "delfin"
version = "0.4.5"
edition = "2021"
rust-version = "1.75.0"

[features]
# Enables GStreamer video player backend
gst = ["dep:video_player_gst"]

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
chrono = "0.4.35"
derive_builder = "0.20.0"
dirs = "5.0.1"
env_logger = "0.11.3"
fluent-templates = { version = "0.9.1", features = ["tera"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
jellyfin_api = "10.9.2-1"
relm4 = { workspace = true }
relm4-icons = { version = "0.8.2" }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.18"
souvlaki = { version = "0.7.3", features = [
    "use_zbus",
], default-features = false }
sys-locale = "0.3.1"
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["macros"] }
toml = "0.8.12"
tracing = { version = "0.1.40", features = ["log"] }
unic-langid = { version = "0.9.4", features = ["macros", "serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
video_player_gst = { version = "0.1.0", path = "../video_player_gst", optional = true }
video_player_mpv = { version = "0.1.0", path = "../video_player_mpv" }
whoami = { version = "1.5.1", default-features = false }

[build-dependencies]
grass = "0.13.2"
regex = "1.10.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
