[package]
name = "video_player_gst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { workspace = true }
gst = { package = "gstreamer", version = "0.21.0" }
gstgtk4 = { package = "gst-plugin-gtk4", version = "0.11.0" }
gstplay = { package = "gstreamer-play", version = "0.21.0" }
